[package]
name = "keystonelight"
version = "0.1.0"
edition = "2021"
authors = ["KeystoneLight Contributors"]
description = "A lightweight, modular key-value store with support for nested objects and multiple data types"
repository = "https://github.com/yourusername/keystonelight"
license = "MIT"
keywords = ["database", "key-value-store", "storage", "json", "cli"]
categories = ["database-implementations", "command-line-utilities"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.8"

[lib]
name = "keystonelight"
path = "src/lib.rs"

[[bin]]
name = "keystonelight"
path = "src/main.rs"
