[package]
name = "keystonelight"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Dong"]
description = "A concurrent key-value database with in-memory storage and file persistence"
license = "MIT"
repository = "https://github.com/yourusername/keystonelight"
readme = "README.md"
keywords = ["database", "key-value", "concurrent", "persistence"]
categories = ["database", "concurrency"]

[lib]
name = "keystonelight"
path = "src/lib.rs"

[dependencies]
fs2 = "0.4.3"
signal-hook = "0.3.17"
nix = { version = "0.27.1", features = ["process", "signal"] }
lazy_static = "1.4"
ctrlc = "3.4"
flock = "0.2.0"
libc = "0.2.153"
base64 = "0.21.7"
uuid = { version = "1.7.0", features = ["v4"] }
rustyline = "12.0.0"

[dev-dependencies]
tempfile = "3.10.1"
rand = "0.8.5"
log = "0.4.21"

[[bin]]
name = "database"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
